--- a/EasyCytoidPlayer/EasyCytoidPlayer.csproj
+++ b/EasyCytoidPlayer/EasyCytoidPlayer.csproj
@@ -39,6 +39,9 @@
     <Reference Include="ATEM">
       <HintPath>.\ATEM.dll</HintPath>
     </Reference>
+    <Reference Include="NAudio, Version=1.8.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.8.5\lib\net35\NAudio.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheWav.cs" />
     <Compile Include="JSON\C2Level.cs" />
     <Compile Include="JSON\Chart.cs" />
     <Compile Include="JSON\Level.cs" />
@@ -87,6 +91,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
